log
Tue 26 Mar 2024 07:10:31 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cd4f633
Tue 26 Mar 2024 07:13:13 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:42: error: ‘Node’ has no member named ‘key’
   41 |   if (list->current) return list->current->key;
      |                                          ^~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
590d056
Tue 26 Mar 2024 07:14:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
10771a6
Tue 26 Mar 2024 07:14:55 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
0e78353
Tue 26 Mar 2024 07:15:51 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
69a66f4
Tue 26 Mar 2024 07:17:43 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4714f24
Tue 26 Mar 2024 07:18:26 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b163e3b
Tue 26 Mar 2024 07:19:51 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
3ec5110
Tue 26 Mar 2024 07:25:58 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 25/70
e4782f2
Tue 26 Mar 2024 07:27:00 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|4
total_score: 25/70
bb63867
Tue 26 Mar 2024 07:27:59 PM UTC: 
 list.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
 tests:  5|4
total_score: 25/70
018b6ad
Tue 26 Mar 2024 07:36:21 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:71:3: error: unknown type name ‘node’; did you mean ‘Node’?
   71 |   node* newNode = (node *)malloc(sizeof(node));
      |   ^~~~
      |   Node
list.c:71:20: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   71 |   node* newNode = (node *)malloc(sizeof(node));
      |                    ^~~~
      |                    Node
list.c:71:20: note: each undeclared identifier is reported only once for each function it appears in
list.c:71:26: error: expected expression before ‘)’ token
   71 |   node* newNode = (node *)malloc(sizeof(node));
      |                          ^
list.c:72:10: error: request for member ‘data’ in something not a structure or union
   72 |   newNode->data = data;
      |          ^~
list.c:73:10: error: request for member ‘next’ in something not a structure or union
   73 |   newNode->next = list->head;
      |          ^~
list.c:74:20: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   74 |   list->head->prev = newNode;
      |                    ^
list.c:75:14: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   75 |   list->head = newNode;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
8027161
Tue 26 Mar 2024 07:36:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ccfab15
Tue 26 Mar 2024 07:37:49 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 35/70
a78b68b
Tue 26 Mar 2024 07:42:25 PM UTC: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
list.c:102:1: error: expected identifier or ‘(’ before ‘}’ token
  102 | }
      | ^
Compilation failed
fd31a3a
Tue 26 Mar 2024 07:43:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|2
total_score: 45/70
62b7a94
Tue 26 Mar 2024 07:45:27 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  7|2
total_score: 45/70
dd12e5f
